By default, it won’t return branches that don’t have any associated promo
